test/files/neg/t4217.scala
object A extends App {
  42 match { }
}
