test/files/neg/t4217.check
t4217.scala:2: error: 'case' expected but '}' found.
  42 match { }
             ^
1 error
